--- a/src/blocks/cards/__container/cards__container.css
+++ b/src/blocks/cards/__container/cards__container.css
@@ -1,6 +1,6 @@
 .cards__container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 0;
 }
