--- a/src/blocks/page.css
+++ b/src/blocks/page.css
@@ -11,7 +11,7 @@
     background-color: #fff;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     margin: auto;
     padding: 0 80px 80px 80px;
 }
