feat: добавить: попап с вопросом перед удалением книги, адаптивность всей страницы на разрешениях mobile/tab/desktop

--- a/src/blocks/buttonBlock/buttonBlock.css
+++ b/src/blocks/buttonBlock/buttonBlock.css
@@ -5,3 +5,10 @@
     margin-bottom: 40px;
     justify-content: space-around;
 }
+
+@media screen and (max-width: 550px) {
+    .buttonBlock {
+        flex-direction: column;
+        margin-bottom: 30px;
+    }
+}
