--- a/src/blocks/button/button.css
+++ b/src/blocks/button/button.css
@@ -5,7 +5,6 @@
     border-radius: 5px;
     margin-bottom: 40px;
     color: black;
-    margin-right: 50px;
     transition: all .3s linear;
 }
 
@@ -13,4 +12,11 @@
     border: white;
     background-color: #282c34;
     color: white;
+}
+
+@media screen and (max-width: 550px) {
+    .button {
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
 }
