--- a/src/blocks/card/__image/card__image.css
+++ b/src/blocks/card/__image/card__image.css
@@ -5,3 +5,9 @@
     max-height: 200px;
     max-width: 100%;
 }
+
+@media screen and (max-width: 768px){
+    .card__image {
+        display: none;
+    }
+}
