--- a/src/blocks/cards/__container/cards__container.css
+++ b/src/blocks/cards/__container/cards__container.css
@@ -1,6 +1,24 @@
 .cards__container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    gap: 20px;
     padding: 0;
+    margin: auto;
+}
+
+@media screen and (max-width: 880px){
+    .cards__container {
+        gap: 15px;
+        grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
+    }
+}
+
+@media screen and (max-width: 375px){
+    .cards__container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
