--- a/src/blocks/cards/cards.css
+++ b/src/blocks/cards/cards.css
@@ -1,5 +1,8 @@
 .cards {
     width: 100%;
+    max-width: 1440px;
     display: flex;
     flex-direction: column;
+    margin: auto;
+    align-items: center;
 }
