--- a/src/blocks/form/__title/form__title.css
+++ b/src/blocks/form/__title/form__title.css
@@ -12,6 +12,7 @@
 @media screen and (max-width: 570px) {
     .form__title {
         font-size: 18px;
-        margin: 0 0 70px 0;
+        margin: 0 0 30px 0;
+        text-align: center;
     }
 }
