--- a/src/blocks/page.css
+++ b/src/blocks/page.css
@@ -15,3 +15,9 @@
     margin: auto;
     padding: 0 80px 80px 80px;
 }
+
+@media screen and (max-width: 768px) {
+    .page {
+        padding: 0 15px 15px 15px;
+    }
+}
