--- a/src/blocks/yearNavBar/__year-tab/yearNavBar__tab.css
+++ b/src/blocks/yearNavBar/__year-tab/yearNavBar__tab.css
@@ -10,7 +10,6 @@
     border: 1px black solid;
     border-radius: 5px;
     padding: 10px 0 0 0 ;
-    margin: 0 20px 0 40px;
     background-color: white;
     color: black;
     box-sizing: border-box;
@@ -33,3 +32,10 @@
     background-color: #282c34;
     color: white;
 }
+
+/*@media screen and (max-width: 424px) {
+    .yearNavBar__tab label {
+        width: 50px;
+        height: 30px;
+    }
+}*/
